--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,10 @@
     />
   </head>
   <body>
+
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    
+    <include src="./partials/loader.html"></include>
     <include src="./partials/modal-auth.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
