--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/header.html"></include>
+    <include src="./partials/loader.html"></include>
+    <include src="./partials/modal-auth.html"></include>
+      <include src="./partials/header.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
