--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,13 @@
   <body>
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    
+    <!--Loader-->
     <include src="./partials/loader.html"></include>
-    <include src="./partials/modal-auth.html"></include>
+    <!--Header-->
     <include src="./partials/header.html"></include>
+    <!--Modal-->
+    <include src="./partials/modal-auth.html"></include>
+    
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
