--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!--Header-->
     <include src="./partials/header.html"></include>
+    <!--Search-film-gallery-->
+    <include src="./partials/search-films-gallery.html"></include>
     <!--Loader-->
     <include src="./partials/loader.html"></include>
     <!--Modal-->
