--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
     <include src="./partials/loader.html"></include>
     <!--Modal-->
     <include src="./partials/modal-auth.html"></include>
+	<!--Main-->
+	<include src="./partials/main.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
