--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
     <include src="./partials/modal-auth.html"></include>
     <!--Main-->
     <include src="./partials/main.html"></include>
+    <!--Search-film-gallery-->
+    <include src="./partials/search-films-gallery.html"></include>
     <!--Footer-->
     <include src="./partials/footer.html"></include>
 
